@@ -1,3 +1,5 @@
 Oct 10, 1999
  - standardized indentation of source files
 ------ omnetpp-2.0b3 released ------
+May 19, 2000
+ - removed reference to TVEnv
